--- a/文件.md
+++ b/文件.md
@@ -23,7 +23,7 @@
 
 Tip: 在使用Unicode转义符或是一些实际的Unicode字符时，建议做些注释给出解释，这有助于别人阅读和理解
 
-```cpp
+```java
 String unitAbbrev = "μs";                                 | 赞，即使没有注释也非常清晰
 String unitAbbrev = "\u03bcs"; // "μs"                    | 允许，但没有理由要这样做
 String unitAbbrev = "\u03bcs"; // Greek letter mu, "s"    | 允许，但这样做显得笨拙还容易出错
