--- a/格式.md
+++ b/格式.md
@@ -28,3 +28,96 @@ return new MyClass() {
   }
 };
 ```
+**空块**
+
+一个空的块状结构里什么也不包含，大括号可以简洁地写成{}，不需要换行。例外：如果它是一个多块语句的一部分(if/else 或 try/catch/finally) ，即使大括号内没内容，右大括号也要换行
+
+#### 缩进
+
+每当开始一个新的块，缩进增加2个空格，当块结束时，缩进返回先前的缩进级别。缩进级别适用于代码和注释
+
+#### 列限制: 120
+
+#### 自动换行
+
+- 如果在非赋值运算符处断开，那么在该符号前断开(比如+，它将位于下一行)。注意：这一点与Google其它语言的编程风格不同(如C++和JavaScript)。 这条规则也适用于以下“类运算符”符号：点分隔符(.)，类型界限中的&（<T extends Foo & Bar>)，catch块中的管道符号(catch (FooException | BarException e)
+- 如果在赋值运算符处断开，通常的做法是在该符号后断开(比如=，它与前面的内容留在同一行)。这条规则也适用于foreach语句中的分号。
+- 方法名或构造函数名与左括号留在同一行。
+- 逗号(,)与其前面的内容留在同一行
+- 自动换行时缩进+4个空格
+
+#### 垂直空白
+
+以下情况需要使用一个空行：
+
+- 类内连续的成员之间：字段，构造函数，方法，嵌套类，静态初始化块，实例初始化块。
+  - 例外：两个连续字段之间的空行是可选的，用于字段的空行主要用来对字段进行逻辑分组。
+- 在函数体内，语句的逻辑分组间使用空行。
+
+#### 水平空白
+
+除了语言需求和其它规则，并且除了文字，注释用到单个空格，单个ASCII空格也出现在以下几个地方：
+
+- 分隔任何保留字与紧随其后的左括号(`(`)(如if, for catch等)。
+- 分隔任何保留字与其前面的右大括号(`}`)(如else, catch)。
+- 在任何左大括号前({)，两个例外：
+  - @SomeAnnotation({a, b})(不使用空格)。
+  - String[][] x = foo;
+- 在任何二元或三元运算符的两侧。这也适用于以下“类运算符”符号：
+  - 类型界限中的&(<T extends Foo & Bar>)。
+  - catch块中的管道符号(catch (FooException | BarException e)。
+  - foreach语句中的分号。
+- 在`, : ;`及右括号())后
+- 如果在一条语句后做注释，则双斜杠(//)两边都要空格。这里可以允许多个空格，但没有必要。
+- 类型和变量之间：List list。
+
+#### 用小括号来限定组
+
+除非作者和reviewer都认为去掉小括号也不会使代码被误解，或是去掉小括号能让代码更易于阅读，否则我们不应该去掉小括号。 我们没有理由假设读者能记住整个Java运算符优先级表
+
+#### 枚举类
+
+枚举常量间用逗号隔开，并换行
+
+#### 变量声明
+
+**每次只声明一个变量**
+
+不要使用组合声明，比如`int a, b;`
+
+**声明位置**
+
+不要在一个代码块的开头把局部变量一次性都声明了，而是在第一次需要使用它时才声明。 局部变量在声明时进行初始化
+
+#### 非C风格的数组声明
+
+中括号是类型的一部分：`String[] args`， 而非`String args[]`
+
+#### switch语句
+
+**缩进**
+
+与其它块状结构一致，switch块中的内容缩进为2个空格
+
+**注释**
+
+在一个switch块内，每个语句组要么通过`break, continue, return`或抛出异常来终止，要么通过一条注释来说明程序将继续执行到下一个语句组， 任何能表达这个意思的注释都是OK的(典型的是用`// fall through`)。这个特殊的注释并不需要在最后一个语句组(一般是default)中出现。示例：
+
+```java
+switch (input) {
+  case 1:
+  case 2:
+    prepareOneOrTwo();
+    // fall through
+  case 3:
+    handleOneTwoOrThree();
+    break;
+  default:
+    handleLargeNumber(input);
+}
+```
+
+**default**
+
+每个switch语句都包含一个default语句组，即使它什么代码也不包含
+
